--- a/d2c_robot_libs/CMakeLists.txt
+++ b/d2c_robot_libs/CMakeLists.txt
@@ -24,6 +24,7 @@ include_directories(
 add_executable(robot_node
   src/robot_node.cpp
   src/d2c_control.cpp
+  src/serving_command.cpp
 )
 add_dependencies(robot_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(robot_node ${catkin_LIBRARIES} )
