--- a/d2c_robot_libs/CMakeLists.txt
+++ b/d2c_robot_libs/CMakeLists.txt
@@ -4,6 +4,7 @@ project(d2c_robot_libs)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   d2c_robot_msgs
+  darknet_ros_msgs
 )
 
 find_package(Eigen3 REQUIRED)
@@ -25,6 +26,7 @@ add_executable(robot_node
   src/robot_node.cpp
   src/d2c_control.cpp
   src/serving_command.cpp
+  
 )
 
 add_dependencies(robot_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
