--- a/d2c_robot_description/CMakeLists.txt
+++ b/d2c_robot_description/CMakeLists.txt
@@ -13,9 +13,15 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package()
 
 include_directories(
+ include
   ${catkin_INCLUDE_DIRS}
+  ${GAZEBO_LIBRARY_DIRS}
 )
 
  install(DIRECTORY launch meshes rviz urdf
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+add_executable(kinematic src/kinematic.cpp src/IK_Solver.cpp)
+add_dependencies(kinematic ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(kinematic ${catkin_LIBRARIES})
